--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.13.0",
     "@supabase/supabase-js": "^2.43.1",
     "framer-motion": "^11.1.7",
+    "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
