--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.4",
     "@nextui-org/react": "^2.3.6",
     "@prisma/client": "^5.13.0",
@@ -17,7 +18,9 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
+    "zod": "^3.23.7"
   },
   "devDependencies": {
     "@types/node": "^20",
